--- a/package.json
+++ b/package.json
@@ -36,9 +36,11 @@
     "@angular/router": "^5.0.0",
     "@angular/tsc-wrapped": "~4.3.1",
     "@angular/upgrade": "^5.0.4",
+    "@types/file-saver": "^1.3.0",
     "@types/socket.io-client": "^1.4.31",
     "angular2-draggable": "^1.0.7",
     "babel-eslint": "^8.0.2",
+    "blob-stream": "^0.1.3",
     "body-parser": "~1.18.2",
     "browser-detect": "^0.2.18",
     "connect-mongodb-session": "^1.4.0",
@@ -55,7 +57,9 @@
     "express-fileupload": "^0.3.0",
     "express-promise-router": "^2.0.0",
     "express-session": "^1.15.6",
+    "file-saver": "^1.3.3",
     "hammerjs": "^2.0.8",
+    "json2xls": "^0.1.2",
     "mocha-tap-reporter": "^0.1.3",
     "mongodb": "^3.0.0-rc0",
     "nedb": "^1.8.0",
@@ -65,6 +69,7 @@
     "npm": "^5.5.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
+    "pdfkit": "^0.8.3",
     "request": "^2.34",
     "request-promise-native": "^1.0.5",
     "rxjs": "^5.5.2",
