--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "debug": "~2.6.9",
     "devextreme": "^17.1.7",
     "devextreme-angular": "^17.1.7",
+    "excel4node": "^1.3.2",
     "express": "~4.15.5",
     "express-async-await": "^1.1.0",
     "express-fileupload": "^0.3.0",
