--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "express-session": "^1.15.6",
     "file-saver": "^1.3.3",
     "hammerjs": "^2.0.8",
+    "html2pdf.js": "^0.8.2",
     "json2xls": "^0.1.2",
     "mocha-tap-reporter": "^0.1.3",
     "mongodb": "^3.0.0-rc0",
