--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "preinstall": "node -e \"if(process.env.npm_execpath.indexOf('yarn') === -1) throw new Error('You must use Yarn to install, not NPM')\"",
-    "build": "rimraf dist && webpack --config config/webpack.prod.js --bail",
+    "build": "rimraf dist && yarn run migrate && webpack --config config/webpack.prod.js --bail",
     "client": "webpack-dev-server --config config/webpack.dev.js --inline",
     "server": "NODE_ENV=dev node server/app.js",
     "test": "mocha --recursive tests",
