--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "html2pdf.js": "^0.8.2",
     "json2xls": "^0.1.2",
     "mocha-tap-reporter": "^0.1.3",
-    "mongodb": "^3.0.0-rc0",
+    "mongodb": "^3.0.0",
     "nedb": "^1.8.0",
     "nedb-promise": "^2.0.1",
     "ng2-date-picker": "^2.6.2",
