--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "nedb-promise": "^2.0.1",
     "ng2-date-picker": "^2.6.2",
     "nightmare": "^2.10.0",
+    "node-xlsx": "^0.12.0",
     "npm": "^5.5.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
