--- a/package.json
+++ b/package.json
@@ -36,6 +36,17 @@
     "@angular/router": "^5.0.0",
     "@angular/tsc-wrapped": "~4.3.1",
     "@angular/upgrade": "^5.0.4",
+    "@progress/kendo-angular-buttons": "^4.1.1",
+    "@progress/kendo-angular-dateinputs": "^3.4.0",
+    "@progress/kendo-angular-dropdowns": "^3.0.1",
+    "@progress/kendo-angular-excel-export": "^2.1.0",
+    "@progress/kendo-angular-grid": "^3.4.0",
+    "@progress/kendo-angular-inputs": "^3.1.2",
+    "@progress/kendo-angular-intl": "^1.4.1",
+    "@progress/kendo-angular-l10n": "^1.2.0",
+    "@progress/kendo-data-query": "^1.3.1",
+    "@progress/kendo-drawing": "^1.5.6",
+    "@progress/kendo-theme-default": "^2.53.2",
     "@types/file-saver": "^1.3.0",
     "@types/socket.io-client": "^1.4.31",
     "angular2-draggable": "^1.0.7",
@@ -75,7 +86,7 @@
     "pdfkit": "^0.8.3",
     "request": "^2.34",
     "request-promise-native": "^1.0.5",
-    "rxjs": "^5.5.2",
+    "rxjs": "^5.5",
     "serve-favicon": "~2.4.5",
     "systemjs": "0.19.39",
     "winston": "^2.4.0",
